# RRClaw

./: Cargo.toml  Claude.md  README.md  README.zh.md
.claude/: settings.local.json
.github/workflows/: ci.yml  release.yml  update-homebrew.yml
docs/: implementation-plan.md  p1-plan.md  p10-telegram-daemon.md  p2-dynamic-context.md  p2-interactive-provider-switch.md  p2-provider-switch.md  p2-slash-commands-and-config-tool.md  p2-switch-command.md  p3-skills.md  p4-git-tool-llm-guidance.md  p4-git-tool.md  p4-history-compaction.md  p4-mcp-client.md  p4-memory-tools.md  p4-reliable-provider.md  p4-skill-routing.md  p5-action-tracker.md  p5-discord.md  p5-http-tool.md  p5-identity-files.md  p5-plan.md  p5-prompt-injection.md  p5-routines-review.md  p5-routines.md  p6-a-integration-e2e-plan.md  p6-b-coverage-plan.md  p6-e2e-and-docs.md  p6-http-smart-response.md  p7-dynamic-schema.md  p7-e2e-tests.md  p7-mcp-lazy-loading.md  p7-plan.md  p7-tool-routing.md  p8-multi-channel.md  p9-i18n.md  provider-api-reference.md  release-guide.md  tantivy-integration.md  tool-call-investigation.md  tool-robustness.md  (+1 more)
src/: i18n.rs  lib.rs  main.rs
src/agent/: Claude.md  identity.rs  loop_.rs  mod.rs  tool_groups.rs
src/channels/: Claude.md  cli.rs  mod.rs  telegram.rs  unified.rs
src/config/: Claude.md  mod.rs  schema.rs  setup.rs
src/daemon/: client.rs  mod.rs  protocol.rs  server.rs
src/mcp/: Claude.md  mod.rs  tool.rs
src/memory/: Claude.md  mod.rs  sqlite.rs  traits.rs
src/providers/: Claude.md  claude.rs  compatible.rs  mod.rs  reliable.rs  traits.rs
src/routines/: Claude.md  mod.rs
src/security/: Claude.md  injection.rs  mod.rs  policy.rs
src/skills/: Claude.md  mod.rs
src/skills/builtin/: code-review.en.md  code-review.md  find-skills.en.md  find-skills.md  git-commit.en.md  git-commit.md  mcp-install.en.md  mcp-install.md  rust-dev.en.md  rust-dev.md
src/tools/: Claude.md  config.rs  file.rs  git.rs  http.rs  memory.rs  mod.rs  routine.rs  self_info.rs  shell.rs  skill.rs  traits.rs
tests/: daemon_integration.rs  e2e_agent.rs  scheduler_integration.rs
tests/common/: mock_provider.rs  mod.rs
