[package]
name = "rrclaw"
version = "0.0.2"
edition = "2021"
description = "安全优先的 AI 助手基础设施，100% Rust，Trait 可插拔架构"
license = "MIT"
authors = ["yzzting"]
repository = "https://github.com/yzzting/rrclaw"
homepage = "https://github.com/yzzting/rrclaw"
readme = "README.md"
keywords = ["ai", "agent", "cli", "assistant", "llm"]
categories = ["command-line-utilities", "asynchronous"]

[features]
default = ["telegram"]
telegram = ["dep:teloxide"]

[dependencies]
# 异步运行时
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "fs", "signal", "process", "time", "sync"] }
async-trait = "0.1"
futures-util = "0.3"
tokio-cron-scheduler = "0.13"

# HTTP 客户端
reqwest = { version = "0.13", default-features = false, features = ["rustls", "json", "stream"] }
url = "2"

# 序列化
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# CLI
clap = { version = "4", features = ["derive"] }
reedline = { version = "0.37", features = ["external_printer"] }

# 配置
figment = { version = "0.10", features = ["toml", "env"] }
directories = "5"

# 数据库 + 搜索
rusqlite = { version = "0.32", features = ["bundled"] }
tantivy = "0.25"
tantivy-jieba = "0.18"

# 错误处理
color-eyre = "0.6"
thiserror = "2"

# 日志
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

# 工具
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
dialoguer = "0.12.0"
teloxide = { version = "0.17.0", features = ["macros"], optional = true }
toml_edit = "0.25.2"
shell-words = "1"
regex = "1"
rmcp = { version = "0.16", features = ["client", "transport-child-process", "transport-streamable-http-client-reqwest"] }
html2text = "0.12"
libc = "0.2"

[dev-dependencies]
tempfile = "3"
tokio-test = "0.4"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
